Chapter 3 : Recommending Movies

--- a/Python/Building Recommendation Engines with PySpark/takeaways.ipynb
+++ b/Python/Building Recommendation Engines with PySpark/takeaways.ipynb
@@ -126,6 +126,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### ALS algorithm"
    ]
   },
@@ -135,8 +142,6 @@
    "source": [
     "```\n",
     "from pyspark.sql import SparkSession\n",
-    "from pyspark.ml.recommendation import ALS\n",
-    "from pyspark.ml.evaluation import RegressionEvaluator\n",
     "\n",
     "# Initialize SparkSession\n",
     "spark = SparkSession.builder \\\n",
@@ -155,17 +160,48 @@
     "users = users.withColumn(\"userId\", monotonically_increasing_id()).persist() # caching to make sure the values do not change\n",
     "items = df.select(\"item_cat\").distinct().coalesce(1) # coalesce to put them in a single partition for consistent increase of id\n",
     "items = items.withColumn(\"itemId\", monotonically_increasing_id()).persist() # caching to make sure the values do not change\n",
-    "df = = df.join(users, \"user_cat\", \"left\").join(items, \"item_cat\", \"left\")\n",
+    "df = df.join(users, \"user_cat\", \"left\").join(items, \"item_cat\", \"left\")\n",
+    "# Sparsity = (Number of empty entries) / (Total number of entries)\n",
+    "numerator = ratings.count()\n",
+    "num_users = ratings.select(\"userId\").distinct().count()\n",
+    "num_items = ratings.select(\"itemId\").distinct().count()\n",
+    "denominator = num_users * num_items\n",
+    "sparsity = (1.0 - (numerator *1.0)/denominator)*100\n",
     "\n",
     "(training_data, test_data) = df.randomSplit([0.8, 0.2]) # Split data into training and test sets\n",
     "\n",
-    "# Train with ALS model\n",
-    "als = ALS(rank=10, maxIter=10, regParam=0.01, userCol=\"userId\", itemCol=\"itemId\", ratingCol=\"rating\")\n",
-    "model = als.fit(training_data)\n",
-    "predictions = model.transform(test_data) # Make predictions on test data\n",
-    "# Evaluate predictions using RMSE\n",
+    "# k flod Cross-validation\n",
+    "from pyspark.ml.recommendation import ALS\n",
+    "from pyspark.ml.tuning import ParamGridBuilder, CrossValidator\n",
+    "from pyspark.ml.evaluation import RegressionEvaluator\n",
+    "\n",
+    "als = ALS(userCol=\"userId\", itemCol=\"itemId\", ratingCol=\"rating\",\n",
+    "        coldStartStrategy=\"drop\" , nonnegative =True , implicitPrefs = False)\n",
     "evaluator = RegressionEvaluator(metricName=\"rmse\", labelCol=\"rating\", predictionCol=\"prediction\")\n",
-    "rmse = evaluator.evaluate(predictions)\n",
+    "param_grid = ParamGridBuilder()\n",
+    "                .addGrid(als.rank, [5, 40, 80, 120])\n",
+    "                .addGrid(als.maxIter, [5, 100, 250, 500])\n",
+    "                .addGrid(als.regParam, [.05, .1, 1.5])\n",
+    "                .build()\n",
+    "cv = CrossValidator(estimator = als,\n",
+    "                estimatorParamMaps = param_grid,\n",
+    "                evaluator = evaluator,\n",
+    "                numFolds = 5)\n",
+    "len(param_grid) # Total number of models in the grid\n",
+    "model = cv.fit(training_data) # Train with ALS model\n",
+    "best_model = model.bestModel # Best Model\n",
+    "predictions = best_model.transform(test_data) # Make predictions on test data\n",
+    "rmse = evaluator.evaluate(predictions) # Evaluate predictions using RMSE\n",
+    "best_model.getRank()\n",
+    "best_model.getMaxIter()\n",
+    "best_model.getRegParam()\n",
+    "recommendations_df = best_model.recommendForAllUsers(5) # Generate all recommendations for users up to userId 5\n",
+    "from pyspark.sql.functions import explode\n",
+    "# Explode recommendations column to separate itemId and prediction\n",
+    "df = recommendations_df.withColumn(\"itemId_rating\", explode(\"recommendations\")) # Put each recommendation in new row\n",
+    "df = df.withColumn(\"itemId\", col(\"itemId_rating\").getField(\"itemId\"))\\\n",
+    "                .withColumn(\"rating\", col(\"itemId_rating\").getField(\"rating\")) # Generate separate columns from the pair\n",
+    "df.join(ratings, [\"userId\", \"itemId\"], \"left\").filter(ratings['rating'].isNull()).show() # Only show recommendation for items not rated yet\n",
     "```"
    ]
   },
