--- a/Python/Building Recommendation Engines with PySpark/takeaways.ipynb
+++ b/Python/Building Recommendation Engines with PySpark/takeaways.ipynb
@@ -160,7 +160,12 @@
     "users = users.withColumn(\"userId\", monotonically_increasing_id()).persist() # caching to make sure the values do not change\n",
     "items = df.select(\"item_cat\").distinct().coalesce(1) # coalesce to put them in a single partition for consistent increase of id\n",
     "items = items.withColumn(\"itemId\", monotonically_increasing_id()).persist() # caching to make sure the values do not change\n",
-    "df = df.join(users, \"user_cat\", \"left\").join(items, \"item_cat\", \"left\")\n",
+    "new_rating_df = df.join(users, \"user_cat\", \"left\").join(items, \"item_cat\", \"left\") # If rating dataframe already exists\n",
+    "## NOTE: If rating dataframe does not exist, then create one:\n",
+    "users = df1.select(\"userId\").distinct()\n",
+    "items = df2.select(\"itemId\").distinct()\n",
+    "custom_rating_df = users.crossJoin(items).join(df3, [\"userId\", \"itemId\"], \"left\").fillna(0)\n",
+    "\n",
     "# Sparsity = (Number of empty entries) / (Total number of entries)\n",
     "numerator = ratings.count()\n",
     "num_users = ratings.select(\"userId\").distinct().count()\n",
@@ -202,13 +207,102 @@
     "df = df.withColumn(\"itemId\", col(\"itemId_rating\").getField(\"itemId\"))\\\n",
     "                .withColumn(\"rating\", col(\"itemId_rating\").getField(\"rating\")) # Generate separate columns from the pair\n",
     "df.join(ratings, [\"userId\", \"itemId\"], \"left\").filter(ratings['rating'].isNull()).show() # Only show recommendation for items not rated yet\n",
+    "\n",
+    "### NOTE: For implicit rating columns (eg: No of clicks / binary rating etc) use custom evaluation metric (ROEM) instead of RMSE\n",
+    "### Or create weighted rating column by feature engineering. Also, make sure to put \"implicitPrefs = True\" in ALS model param\n",
+    "from pyspark.ml.evaluation import Evaluator\n",
+    "class ROEMEvaluator(Evaluator):\n",
+    "    def __init__(self, userCol=\"userId\", itemCol=\"itemId\", ratingCol=\"num_clicks\"):\n",
+    "        self.userCol = userCol\n",
+    "        self.itemCol = itemCol\n",
+    "        self.ratingCol = ratingCol\n",
+    "\n",
+    "    def _evaluate(self, predictions):\n",
+    "        predictions.createOrReplaceTempView(\"predictions\")\n",
+    "        denominator = predictions.groupBy().sum(self.ratingCol).collect()[0][0]\n",
+    "        rankings = spark.sql(\"SELECT \" + self.userCol + \", \" + self.ratingCol + \", PERCENT_RANK() OVER (PARTITION BY \" + self.  userCol + \" ORDER BY prediction DESC) AS rank FROM predictions\")\n",
+    "        rankings.createOrReplaceTempView(\"rankings\")\n",
+    "        numerator = spark.sql(\"SELECT SUM(\" + self.ratingCol + \" * rank) FROM rankings\").collect()[0][0]\n",
+    "        performance = numerator / denominator\n",
+    "        return performance\n",
+    "evaluator = ROEMEvaluator( ratingCol=\"colName\")\n",
+    "\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ROEM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# ROEM is a metric used to evaluate the performance of recommendation systems for implicit ratings of ALS algorithm.\n",
+    "# ROEM stands for Rank Ordering Error Metric \n",
+    "# Unfortunately, pyspark do not provide native support for ROEM.\n",
+    "# Here is a custom implementation of ROEM\n",
+    "\n",
+    "def ROEM(predictions, userCol=\"userId\", itemCol=\"songId\", ratingCol=\"num_plays\"):\n",
+    "    # Create table that can be queried\n",
+    "    predictions.createOrReplaceTempView(\"predictions\")\n",
+    "    # Sum of total number of plays of all songs\n",
+    "    denominator = predictions.groupBy().sum(ratingCol).collect()[0][0]\n",
+    "    # Calculating rankings of songs predictions by user\n",
+    "    spark.sql(\n",
+    "        \"SELECT \" + userCol + \" , \" + ratingCol + \" , PERCENT_RANK() OVER (PARTITION BY \" + userCol + \" ORDER BY prediction DESC) AS rank FROM predictions\"\n",
+    "    ).createOrReplaceTempView(\"rankings\")\n",
+    "    # Multiplies the rank of each song by the number of plays and adds the products together\n",
+    "    numerator = spark.sql('SELECT SUM(' + ratingCol + ' * rank) FROM rankings').collect()[0][0]\n",
+    "    # Compute ROEM\n",
+    "    roem = numerator / denominator\n",
+    "    return roem\n",
+    "    \n",
+    "# Split the data into training and test sets\n",
+    "(training, test) = msd.randomSplit([0.8, 0.2])\n",
+    "#Building 5 folds within the training set.\n",
+    "train1, train2, train3, train4, train5 = training.randomSplit([0.2, 0.2, 0.2, 0.2, 0.2], seed = 1)\n",
+    "fold1 = train2.union(train3).union(train4).union(train5)\n",
+    "fold2 = train3.union(train4).union(train5).union(train1)\n",
+    "fold3 = train4.union(train5).union(train1).union(train2)\n",
+    "fold4 = train5.union(train1).union(train2).union(train3)\n",
+    "fold5 = train1.union(train2).union(train3).union(train4)\n",
+    "\n",
+    "foldlist = [(fold1, train1), (fold2, train2), (fold3, train3), (fold4, train4), (fold5, train5)]\n",
+    "\n",
+    "# Empty list to fill with ROEMs from each model\n",
+    "ROEMS = []\n",
+    "\n",
+    "# Loops through all models and all folds\n",
+    "for model in model_list:\n",
+    "    for ft_pair in foldlist:\n",
+    "        # Fits model to fold within training data\n",
+    "        fitted_model = model.fit(ft_pair[0])\n",
+    "        # Generates predictions using fitted_model on respective CV test data\n",
+    "        predictions = fitted_model.transform(ft_pair[1])\n",
+    "        # Generates and prints a ROEM metric CV test data\n",
+    "        r = ROEM(predictions)\n",
+    "        print (\"ROEM: \", r)\n",
+    "    # Fits model to all of training data and generates preds for test data\n",
+    "    v_fitted_model = model.fit(training)\n",
+    "    v_predictions = v_fitted_model.transform(test)\n",
+    "    v_ROEM = ROEM(v_predictions)\n",
+    "    # Adds validation ROEM to ROEM list\n",
+    "    ROEMS.append(v_ROEM)\n",
+    "    print (\"Validation ROEM: \", v_ROEM)\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
