Chapter 2 : Making changes

--- a/Git/Introduction to Git/takeaways.ipynb
+++ b/Git/Introduction to Git/takeaways.ipynb
@@ -4,6 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Git works in 3 parts:\n",
+    "    - Commit:\n",
+    "        - contains the metadata\n",
+    "        - eg: ID or commit hash\n",
+    "    - Tree:\n",
+    "        - tracks the names and locations of files in the repo\n",
+    "        - points to latest changes\n",
+    "    - Blob:\n",
+    "        - binary large object\n",
+    "        - compressed snapshot of a file's contents\n",
+    "        - provides pointer to files in the trees of last binary changes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/02.01.png\"  style=\"width: 400px, height: 300px;\"/></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Shell commands\n"
    ]
   },
@@ -93,18 +124,32 @@
    "metadata": {},
    "source": [
     "```\n",
-    "git code .                                # Open vs code\n",
     "git --help                                # See common git commands\n",
     "git add <filename>                        # Add the particular file to staging area\n",
     "git add .                                 # Add all files to the staging area\n",
+    "git clean -n                              # See all untracked files\n",
+    "git clean -f                              # Delete all untracked files\n",
+    "git reset HEAD <filename>                 # Remove file from the staging area to \n",
+    "git reset HEAD                            # Remove all files from the staging area\n",
     "git commit -m \"message\"                   # Commit the files in the staging area    \n",
     "git commit -am \"message\"                  # Add and Commit\n",
     "git commit --amend                        # Rename commit message (Opens code editor to modify the commit message)\n",
     "git status                                # Show file status\n",
+    "git checkout -- <filename>                # Switch unstaged file back to the last commit version\n",
+    "git checkout <commit hash>  <filename>    # Switch a file back to a specified commit version\n",
+    "git checkout .                            # Switch all unstaged files back to the last commit version\n",
+    "git checkout <commit hash>                # Switch all unstaged files back to the specified commit version\n",
     "git status -s                             # show short file status\n",
+    "git log                                   # Show all commits, use \"q\" to quit\n",
+    "git log --since='Apr 2 2022' --since='Apr 5 2022'         # commit since specified time\n",
+    "git log -n                                # Show last n commits\n",
+    "git log --oneline                         # Show all commits, each information in one line, use \"q\" to quit\n",
+    "git show <commit hash>                    # Show all information of that commit, along with comparison with current version\n",
+    "git annotate <filename>                   # Show all relevant information (time,author, line, content etc) of that file\n",
     "git diff <filename>                       # Compare unstaged file with the last commit\n",
+    "git diff HEAD~1 HEAD~5                    # Compare between 2 commits, can be used with commit has as well\n",
     "git diff -r HEAD <filename>               # Compare staged file with the last commit\n",
-    "git diff -r HEAD                          # Compare all staged files with the last commit\n",
+    "git diff -r HEAD~2                        # Compare all staged files with the third most recent commit\n",
     "git diff <filename>                       # Compare unstage file with the last commit\n",
     "git checkout --<filename>                 //will restore the file from the last commit\n",
     "git checkout --<filename>                 //will restore the file from the last commit\n",
@@ -117,13 +162,6 @@
     "git branch --merged \t\t\t\t\t//will show the branches that are merged\n",
     "git branch --no-merged \t\t\t\t\t//will show the branches that are not merged\n",
     "git merge <branch name>\t\t\t\t\t//while in a branch you can merge another branch\n",
-    "git log                                   //Show all the commits\n",
-    "git log -n                                //n can be replaced by any number \"will show last n commits\"\n",
-    "git log -p                                //Will show detailed discription of the commits  \n",
-    "git log -p -n                             //use of n is similar as described above  \n",
-    "git log --stat                            //will show short detailing of the commits  \n",
-    "git log --stat -n                         //use of n is similar as described above    \n",
-    "git log --since=n.days                    //commit of last n days/weeks/months \"days can be replaced by weeks,months\"\n",
     "git rm --cached <filename>                //will remove to file from the tracking area \n",
     "git rm -rf                                //will uninitialized the current repository              \n",
     "git rm <filename>                         //will delete the file  \n",
