Chapter 3 : Git workflows

--- a/Git/Introduction to Git/takeaways.ipynb
+++ b/Git/Introduction to Git/takeaways.ipynb
@@ -125,6 +125,10 @@
    "source": [
     "```\n",
     "git --help                                # See common git commands\n",
+    "git config [--global] --list              # See configuration list\n",
+    "git config --global core.editor 'code --wait'           # Set editor as VS code \n",
+    "git config --global alias.some_alias \"git_command\"      # create shortcut command using alias (use it like git some_alias)\n",
+    "git config --global -e                    # Open editor for editing global settings\n",
     "git add <filename>                        # Add the particular file to staging area\n",
     "git add .                                 # Add all files to the staging area\n",
     "git clean -n                              # See all untracked files\n",
@@ -134,48 +138,34 @@
     "git commit -m \"message\"                   # Commit the files in the staging area    \n",
     "git commit -am \"message\"                  # Add and Commit\n",
     "git commit --amend                        # Rename commit message (Opens code editor to modify the commit message)\n",
-    "git status                                # Show file status\n",
+    "git status [-s]                           # Show file status\n",
     "git checkout -- <filename>                # Switch unstaged file back to the last commit version\n",
     "git checkout <commit hash>  <filename>    # Switch a file back to a specified commit version\n",
     "git checkout .                            # Switch all unstaged files back to the last commit version\n",
     "git checkout <commit hash>                # Switch all unstaged files back to the specified commit version\n",
-    "git status -s                             # show short file status\n",
-    "git log                                   # Show all commits, use \"q\" to quit\n",
+    "git log [-n] [--oneline]                  # Show all commits, use \"q\" to quit\n",
     "git log --since='Apr 2 2022' --since='Apr 5 2022'         # commit since specified time\n",
-    "git log -n                                # Show last n commits\n",
-    "git log --oneline                         # Show all commits, each information in one line, use \"q\" to quit\n",
     "git show <commit hash>                    # Show all information of that commit, along with comparison with current version\n",
     "git annotate <filename>                   # Show all relevant information (time,author, line, content etc) of that file\n",
     "git diff <filename>                       # Compare unstaged file with the last commit\n",
-    "git diff HEAD~1 HEAD~5                    # Compare between 2 commits, can be used with commit has as well\n",
+    "git diff HEAD~1 HEAD~5                    # Compare between 2 commits, can be used with commit hash, branch as well\n",
     "git diff -r HEAD <filename>               # Compare staged file with the last commit\n",
     "git diff -r HEAD~2                        # Compare all staged files with the third most recent commit\n",
-    "git diff <filename>                       # Compare unstage file with the last commit\n",
-    "git checkout --<filename>                 //will restore the file from the last commit\n",
-    "git checkout --<filename>                 //will restore the file from the last commit\n",
-    "git checkout --<filename>                 //will restore the file from the last commit\n",
-    "git checkout -f                           //All the files will be replaced with last commit\n",
+    "git branch <branch name>         \t      # Create a branch\n",
     "git checkout <branch name> \t\t   \t      # switch to a branch\n",
-    "git branch \t\t\t\t\t\t\t\t//To see the branches\n",
-    "git branch -d <branch name>\t\t\t\t//To delete a branch\n",
-    "git branch -v \t\t\t\t\t\t\t//will show the branch and its last commit\n",
-    "git branch --merged \t\t\t\t\t//will show the branches that are merged\n",
-    "git branch --no-merged \t\t\t\t\t//will show the branches that are not merged\n",
-    "git merge <branch name>\t\t\t\t\t//while in a branch you can merge another branch\n",
+    "git branch [-v]\t[--merged]\t[--no-merged] # see all branches\n",
+    "git branch -d <branch name>\t\t\t\t  # Delete a branch\n",
+    "git merge <branch name>\t[src dst]\t\t  # Merge the specified branch on the current branch\n",
+    "echo \"*.log\" >> .gitignore                # Create a gitignore file and append patterns so that git will not track those files\n",
     "git rm --cached <filename>                //will remove to file from the tracking area \n",
     "git rm -rf                                //will uninitialized the current repository              \n",
     "git rm <filename>                         //will delete the file  \n",
     "git mv <Present filename> <The filename after the change>  //to Rename the file\n",
-    "git clone <URL>                           //Cloning a repository in the current folder\n",
-    "git clone <URL> foldername                //Cloning the repository in the given folder name (Folder will be created by itself) \n",
-    "git config --global alias. <new name> 'old command'  //while create an alias command for the given command\n",
-    "git remote \t\t\t\t\t\t//Show all the name of remote repository\n",
-    "git remote -v \t\t\t\t\t//Show all the path (fetch/push) of the remote repository\n",
-    "git remote add <name> url\t\t\t//Add a remote repository\n",
-    "git remote rm <name>\t\t\t\t//To remove a remote\n",
-    "git push <remote name> <branch name>\t//To push a branch to remote repository\n",
-    "git push <remote name> <branch name>:<branch name you want to have in the remote repository>\n",
-    "git reset HEAD\t\t\t\t\t\t//To move to a previous commit\n",
+    "git clone <URL> [foldername]              # Clone a repository\n",
+    "git remote [-v]\t\t\t\t\t          # Show names of remote repository\n",
+    "git remote add <name> url\t\t\t      # Add a remote repository with an alias\n",
+    "git remote rm <name>\t\t\t\t      # Remove a remote repository\n",
+    "git push <remote name> <branch name> [:<renamed branch>]\t  # Upload a branch to remote repository\n",
     "\n",
     "\n",
     "\n",
