Chapter 4 : Collaborating with Git

--- a/Git/Introduction to Git/takeaways.ipynb
+++ b/Git/Introduction to Git/takeaways.ipynb
@@ -62,6 +62,8 @@
     "cp -r /src/old /dst/\t\t\t\t# copy file from source to destination\n",
     "mv /src/dir /dst/dir\t\t\t\t# Change file name or path\n",
     "rm -r <filename.py>\t\t\t\t\t# Remove file <filename.py> or a folder with child\n",
+    "rm -rf                              # Delete folder recursively\n",
+    "rm <filename>                       # Delete the file  \n",
     "touch a.txt b.txt c.txt\t\t\t\t# Create empty text files \n",
     "ls l <filename.py>\t\t\t\t\t# Shows permission on a file \n",
     "./<filename.py>\t\t\t\t\t\t# Execute the file\n",
@@ -129,6 +131,7 @@
     "git config --global core.editor 'code --wait'           # Set editor as VS code \n",
     "git config --global alias.some_alias \"git_command\"      # create shortcut command using alias (use it like git some_alias)\n",
     "git config --global -e                    # Open editor for editing global settings\n",
+    "git init [project-name]                   # Initialize an empty repo\n",
     "git add <filename>                        # Add the particular file to staging area\n",
     "git add .                                 # Add all files to the staging area\n",
     "git clean -n                              # See all untracked files\n",
@@ -157,15 +160,17 @@
     "git branch -d <branch name>\t\t\t\t  # Delete a branch\n",
     "git merge <branch name>\t[src dst]\t\t  # Merge the specified branch on the current branch\n",
     "echo \"*.log\" >> .gitignore                # Create a gitignore file and append patterns so that git will not track those files\n",
-    "git rm --cached <filename>                //will remove to file from the tracking area \n",
-    "git rm -rf                                //will uninitialized the current repository              \n",
-    "git rm <filename>                         //will delete the file  \n",
+    "git rm --cached <filename>                # Remove to file from the tracking area \n",
     "git mv <Present filename> <The filename after the change>  //to Rename the file\n",
     "git clone <URL> [foldername]              # Clone a repository\n",
-    "git remote [-v]\t\t\t\t\t          # Show names of remote repository\n",
+    "git remote [-v]\t\t\t\t\t          # Show names of remote repository (along with fetch)\n",
     "git remote add <name> url\t\t\t      # Add a remote repository with an alias\n",
     "git remote rm <name>\t\t\t\t      # Remove a remote repository\n",
-    "git push <remote name> <branch name> [:<renamed branch>]\t  # Upload a branch to remote repository\n",
+    "git push <remote name> <local branch name> [:<renamed branch>]\t# Upload a branch to remote repository\n",
+    "git fetch <remote name> <local branch name>    \t                # update a branch according to remote repository\n",
+    "git diff <remote name> <local branch name>    \t                # compare local branch with remote repository\n",
+    "git merge <remote name> <local branch name>    \t                # synchronize branch according to remote repository\n",
+    "git pull <remote name> <local branch name>                      # download a branch to remote repository (fetch+merge)\n",
     "\n",
     "\n",
     "\n",
