Chapter 3 : Collaboration with GitHub

--- a/Git/GitHub Concepts/takewaways.ipynb
+++ b/Git/GitHub Concepts/takewaways.ipynb
@@ -31,7 +31,26 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- cloning : contains link to original repo (pushing change will reflect in original repo)\n",
+    "- Forking : does not contain link to original repo (pushing change will reflect in your own copy of repo)\n",
+    "- Assignee : Approves pull request\n",
+    "- Reviewer : Looks at changes before pull request is merged"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### REVIEW SLIDES"
+   ]
   }
  ],
  "metadata": {
