Chapter 2 : Cell References

--- a/Spreadsheet/Introduction to Google Sheets/takeaways.ipynb
+++ b/Spreadsheet/Introduction to Google Sheets/takeaways.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapter 1"
+    "# Chapter 1 and Chapter 2"
    ]
   },
   {
@@ -23,20 +23,12 @@
     "- Comparison operators : `= A1 >= A3`\n",
     "- Cell ranges : `B1:B5`\n",
     "- Available functions : insert > function\n",
-    "- Change to custom format : `Format > Number > Customize Date`"
+    "- Change to custom format : `Format > Number > Customize Date`\n",
+    "- Circular reference : if a cell references itself. Will produce `#REF!` error\n",
+    "- Use absolute reference when you don't want references to change when you copy them: `= $A$1`\n",
+    "- A reference can be partially absolute by only locking rows: `A$1`\n",
+    "- A reference can be partially absolute by only locking columns: `$A1`\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
