--- a/Spreadsheet/Introduction to Google Sheets/01. Getting started.ipynb
+++ b/Spreadsheet/Introduction to Google Sheets/01. Getting started.ipynb
@@ -131,6 +131,29 @@
     "    - Boolean \n",
     "    - when we evaluate logical expressions: `= A2 > 5`"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Importing data into Google Sheets\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When creating a new spreadsheet, the first step is usually to import the data to analyze. Importing data into a spreadsheet will save you from having to enter values manually, which doesn't scale for large datasets.\n",
+    "\n",
+    "Which of the following statements about importing data into Google Sheets is true?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Data from .csv, .txt, .tsv, and .xlsx files can all be imported into Google Sheets.\n"
+   ]
   }
  ],
  "metadata": {
