Chapter 2 : Logic & Errors

--- a/Spreadsheet/Intermediate Google Sheets/takeaways.ipynb
+++ b/Spreadsheet/Intermediate Google Sheets/takeaways.ipynb
@@ -19,18 +19,15 @@
    "metadata": {},
    "source": [
     "- Filtering : `=FILTER(A2:H20,H2:H20=TRUE)` (Only return result of A2 to H20 if the condifition of H2 to H20 is true)\n",
-    "- Checking number: `=ISNUMBER(A1)`\n",
-    "- Checking Text: `\"=ISTEXT(A1)`\n",
-    "- Checking Dates : `=ISDATE(A1)`\n",
-    "- Checking Logical: `=ISLOGICAL(A1)`\n",
-    "- Checking URL: `=ISURL(A1)`\n",
-    "- Checking Formula:  `=ISFORMULA(A1)`\n",
-    "- convert to dollars : `=TO_DOLLARS(A1)`\n",
-    "- convert to percent : `=TO_PERCENT(A1)`\n",
-    "- convert to number : `=N(A1)`\n",
+    "- Checking data-type: `=ISNUMBER(A1)`, `\"=ISTEXT(A1)`, `=ISDATE(A1)`, `=ISLOGICAL(A1)`,  `=ISURL(A1)`, `=ISFORMULA(A1)`\n",
+    "- converting to other data-type : `=TO_DOLLARS(A1)`, `=TO_PERCENT(A1)`, `=N(A1)`\n",
     "- convert to another unit : `=CONVERT(A1,\"ft^2\",\"m^2\")`\n",
-    "- convert logical to number : `=IF(A1,1,0)`\n",
-    "- To make the text into a clickable hyperlink: `=HYPERLINK(A1,B1)` (Show content of B1 but it is a link that contains A1 hyperlink)\n"
+    "- If-else : `=IF(A1,1,0)`\n",
+    "- To make the text into a clickable hyperlink: `=HYPERLINK(A1,B1)` (Show content of B1 but it is a link that contains A1 hyperlink)\n",
+    "- Transformation of log (10-based), log (e-based), power, exponential, square-root : `=LOG10(A1)`, `=LN(A1)`,`=10^A1`, `=EXP(A1)`,  `=SQRT(A1)`\n",
+    "- rounding transformation : `=ROUND(A1, 2)`,  `=ROUND(A1, -2)`,  `=CEILING(A1,100)`,  `=FLOOR(A1,100)`\n",
+    "- random numbers: `=RAND()`, `=RANDBETWEEN(-10,10)`\n",
+    "- produce RANDOM numbers for given distribution: `=NORMINV(RAND(),0,1)`, `=LOGINV(RAND(),0,1)`, `=TINV(RAND(),5)`, `=FISHERINV(RAND())`, `=FINV(RAND(),2,2)`, `=BETAINV(RAND(),1,1,-10,10)`\n"
    ]
   },
   {
