Chapter 3 : Logic & Errors

--- a/Spreadsheet/Intermediate Google Sheets/takeaways.ipynb
+++ b/Spreadsheet/Intermediate Google Sheets/takeaways.ipynb
@@ -27,7 +27,24 @@
     "- Transformation of log (10-based), log (e-based), power, exponential, square-root : `=LOG10(A1)`, `=LN(A1)`,`=10^A1`, `=EXP(A1)`,  `=SQRT(A1)`\n",
     "- rounding transformation : `=ROUND(A1, 2)`,  `=ROUND(A1, -2)`,  `=CEILING(A1,100)`,  `=FLOOR(A1,100)`\n",
     "- random numbers: `=RAND()`, `=RANDBETWEEN(-10,10)`\n",
-    "- produce RANDOM numbers for given distribution: `=NORMINV(RAND(),0,1)`, `=LOGINV(RAND(),0,1)`, `=TINV(RAND(),5)`, `=FISHERINV(RAND())`, `=FINV(RAND(),2,2)`, `=BETAINV(RAND(),1,1,-10,10)`\n"
+    "- produce RANDOM numbers for given distribution: `=NORMINV(RAND(),0,1)`, `=LOGINV(RAND(),0,1)`, `=TINV(RAND(),5)`, `=FISHERINV(RAND())`, `=FINV(RAND(),2,2)`, `=BETAINV(RAND(),1,1,-10,10)`\n",
+    "- Logical NOT, AND, OR :  `=NOT(A1)`, `=AND(A1,A2)` , `=OR(A1,A2)`\n",
+    "- Single condition (if and else): `= IF(A3>3, \"if_true_then_this\",\"if_false_then_this\")`\n",
+    "- Multiple condition (multiple if, no else, `#N/A` if no condition met): `= IFS(A1, \"if_A1_then_this\",A2,\"if_A2_then_this\")`\n",
+    "- Switch transformation (transform categorical variables into numerical, `#N/A` if no match found): `=SWITCH(A1,\"JAN\",1,\"FEB\",2)`\n",
+    "- Check Blank, count blank : `=ISBLANK(A1)`, `=COUNTBLANK(A1:A10)`\n",
+    "- Correct way to compute with blank (if blank, then `#N/A` ERROR, else OK, then count): `=IF(ISBLANK(A2),NA(),A2)`\n",
+    "- Check Error (all errors produced by functions + missing values): `=ISERROR(A1)`\n",
+    "- Check Error (all errors produced by functions , Blanks and missing are not errors): `=ISERR(A1)`\n",
+    "- Create N/A : `=NA()`\n",
+    "- Other errors:\n",
+    "    - `#DIV/0!` : Dividing by zero\n",
+    "    - `#VALUE!` : Nonsense value in calculation\n",
+    "    - `#REF!` : Reference error\n",
+    "    - `#NAME?` : Forgetting quote in string\n",
+    "    - `#NUM!` : Numbers out of range\n",
+    "    - `#N/A` : Missing value\n",
+    "    - `#ERROR!` : Syntax in formula\n"
    ]
   },
   {
