Chapter 4 : Positional Matching

--- a/Spreadsheet/Intermediate Google Sheets/takeaways.ipynb
+++ b/Spreadsheet/Intermediate Google Sheets/takeaways.ipynb
@@ -37,6 +37,35 @@
     "- Check Error (all errors produced by functions + missing values): `=ISERROR(A1)`\n",
     "- Check Error (all errors produced by functions , Blanks and missing are not errors): `=ISERR(A1)`\n",
     "- Create N/A : `=NA()`\n",
+    "- See row value in integer : `=ROW(A5)`\n",
+    "- See column value in integer : `=COLUMN(A5)`\n",
+    "- Create Absolute Address from row cell and column cell :  `=ADDRESS(A1,A2)`\n",
+    "- Create Relative Address from row cell and column cell :  `=ADDRESS(A1,A2,4)`\n",
+    "- Create pointer to redirect cell address: `= INDIRECT(A1)`\n",
+    "    - go to A1, take the value of A1 as the address of target cell, go to that cell and fetch the value\n",
+    "- Find value of a cell relative to specified cell A1: `=OFFSET(A3,3,1)`\n",
+    "    - Go to cell A3\n",
+    "    - go down 3 cells\n",
+    "    - go right 1 cell\n",
+    "    - take that cell's value\n",
+    "- Find value of a cell in a matrix / dataset: `=INDEX($A$1:$B$6,3,1)`\n",
+    "    - Go to cell $A$1, as the starting point of dataset / matrix\n",
+    "    - go to row no 3 of dataset \n",
+    "    - go to column no 1 of dataset \n",
+    "    - take that cell's value\n",
+    "- `=VLOOKUP(A1, $A$5:$B$10, 2, FALSE)` (Joining on column)\n",
+    "    - search value is in A1,\n",
+    "    - Find where that value matches in whole dataset `$A$5:$B$10`\n",
+    "    - Take the row of the match in dataset\n",
+    "    - return the value from second column\n",
+    "    - `FALSE` means strict match, `TRUE` means any close match to nearest number\n",
+    "- `=SORT($A$5:$B$10, 2, FALSE)`\n",
+    "    - Sort the whole table / dataset by second column\n",
+    "    - `FALSE` means descending order, `TRUE` means ascending order\n",
+    "- `=MATCH(10000, $A$5:$B$10, -1)`\n",
+    "    - Find 10000 in the whole table / dataset\n",
+    "    - The dataset is in descending order (-1) or ascending order (1)\n",
+    "    - returns the position of the value in the sorted order\n",
     "- Other errors:\n",
     "    - `#DIV/0!` : Dividing by zero\n",
     "    - `#VALUE!` : Nonsense value in calculation\n",
@@ -60,7 +89,10 @@
    "source": [
     "- Copying formulas:\n",
     "    1. copy right = `Ctrl + R`\n",
-    "    2. copy down = `Ctrl + D`\n"
+    "    2. copy down = `Ctrl + D`\n",
+    "- See more:\n",
+    "- google sheet : https://support.google.com/docs/answer/181110\n",
+    "- excel : https://support.microsoft.com/en-gb/office/keyboard-shortcuts-in-excel-1798d9d5-842a-42b8-9c99-9b7213f0040f"
    ]
   }
  ],
