Chapter 2 : Behind the Scenes of the Pivot Table

--- a/Spreadsheet/Pivot Tables in Google Sheets/takeaways.ipynb
+++ b/Spreadsheet/Pivot Tables in Google Sheets/takeaways.ipynb
@@ -12,10 +12,10 @@
    "metadata": {},
    "source": [
     "-  Click on any cell of dataset / selecte all dataset >  `Insert > Pivot Table` / `Insert > Pivot Table`\n",
-    "- Put unique values of a column(category) as index : `Rows > Add > [Column headers of source data] `\n",
-    "- Put unique values of a column(category) as columns : `Columns > Add > [Column headers of source data] `\n",
+    "- Put unique values/ combinations of a column(category) as index : `Rows > Add > [Column headers of source data] `\n",
+    "- Put unique values/ combinations of a column(category) as columns : `Columns > Add > [Column headers of source data] `\n",
     "- Pivot the values of a specified column : `Values > Add > [Column headers of source data] `\n",
-    "\n"
+    "- Filter the pivot table by specified values: `Filter > Add > [Column headers of source data] ` \n"
    ]
   }
  ],
