Chapter 4 : Editing Data and Troubleshooting

--- a/Spreadsheet/Pivot Tables in Google Sheets/takeaways.ipynb
+++ b/Spreadsheet/Pivot Tables in Google Sheets/takeaways.ipynb
@@ -34,7 +34,8 @@
    "metadata": {},
    "source": [
     "- Use `COUNTA` instead of `COUNT`\n",
-    "- "
+    "- Identify missing data in a column with `COUNTA` on index column and value column\n",
+    "- Inconsistent row labels: `Ctrl + F` in original dataset and fix it (eg: USA vs United States)\n"
    ]
   }
  ],
