Chapter 2 : Cleaning and Preparing Data

--- a/Spreadsheet/Data Analysis in Google Sheets/takeaways.ipynb
+++ b/Spreadsheet/Data Analysis in Google Sheets/takeaways.ipynb
@@ -29,6 +29,14 @@
     "- Create Relative Address from row cell and column cell :  `=ADDRESS(A1,A2,4)`\n",
     "- Create pointer to redirect cell address: `= INDIRECT(A1)`\n",
     "    - go to A1, take the value of A1 as the address of target cell, go to that cell and fetch the value\n",
+    "- Date functions:\n",
+    "    - date to string format : `=TEXT(\"1/9/2012\", \"mmmmm-dd-yy\")` will make it (J-09-12)\n",
+    "    - `NOW()`, `TODAY()` : current time and date \n",
+    "    - `=DATEDIF(start_date, end_date, 'M')` : interval as month\n",
+    "- Text functions:\n",
+    "    - `=UPPER()`, `=PROPER()` ,`=LOWER()`, `=TRIM()`, `=CONCATENATE()`, `=LEN()`, `=LEFT()`, `=RIGHT()`\n",
+    "    - `=SEARCH(character, text, starting_index)` : Returns the index where the character is located in the text\n",
+    "    - `=SUBSTITUTE(text, old_substring, new_substring, [occurences])` : Replace a substring inside a text\n",
     "- Find value of a cell relative to specified cell A1: `=OFFSET(A3,3,1)`\n",
     "    - Go to cell A3\n",
     "    - go down 3 cells\n",
